_sass/layout/_post.scss
.solid-post {
    h1 {
        color: #5A5A5A;
        font-size: 2rem;
        &.post-title {
            margin-bottom: 0;
        }
    }

    h5 {
        font-size: 1.3rem;
    }
    .post-meta {
        line-height: 12px;
        span,
        time {
            color: $gray;
            display: inline-block;
            vertical-align: middle;
            font-size: 0.9rem;
            font-weight: 300;
            margin: 0 5px;
        }

        span {
            margin-left: 0;
        }

        > span {
            border-right: 1px solid $gray;
            padding-right: 5px;
        }
    }
    .h-entry,
    .solid-breadcrumbs {
        padding: 0.5em 2em 0.6em;

        .menu-mobile-aside {
            align-items: center;
            display: flex;
            justify-content: flex-end;
            button {
                border: 1px solid $brand-color;
                border-radius: 60px;
                padding: 10px 12px;
                background: transparent;
                outline: none;

                i {
                    color: $purple;

                    &::before {
                        content: "\f022";
                    }
                }
            }

            &.open {
                button {
                    padding: 10px 15px;
                    i {
                        &::before {
                            content: "X";
                            font-size: 1.5rem;
                            font-family: Arial, Helvetica, sans-serif;
                            line-height: 0;
                        }
                    }
                }
            }
        }
    }

    .solid-breadcrumbs {
        box-shadow: 0 4px 4px -2px rgba(0,0,0,0.06);

        ul {
            align-items: center;
            display: flex;
        
            li {
                display: inline-block;
                margin: 0 5px;
            }

            a,
            li {
                font-size: 1.1rem;
            }

            i {
                margin: 0 5px;
                transform: rotate(-90deg);
                font-size: 0.7rem;
            }
        }
    }

    .right-side {
        background-color: #F4F4F4;
        padding: 0;
        position: absolute;
        width: 100%;
        left: 0;
        top: 150px;
    }

    .aside-menu {
        display: none;
        padding: 60px 40px 60px 0;
        color: $gray;

        &.open {
            display: block;
        }
        
        h4 {
            font-size: 1.5rem;
            font-weight: bold;
            margin: 0;
            margin-top: 2rem;
            color: hsl(0, 0, 35%);

            a {
                font-size: 1.5rem;
                color: inherit;
                padding-left: 0;
                font-weight: bold;
                color: hsl(0, 0, 40%);
            }
        }

        h4,
        h5,
        a {
            padding-left: 35px;
        }

        ul {
            margin: 20px 0;
            padding: 0;
            list-style: none;

            h5 {
                padding-left: 0px;
            }
            a {
                padding-left: 0px;
               color: inherit;
             }

            li {
                margin: 10px 0;
                list-style-type: none !important;
                &.open {
                    > ul {
                        display: block;
                        margin: 12px 0;
                    }
                }

                &.active {
                    border-left: 4px solid $curious-blue;

                    a {
                        color: $curious-blue;
                        font-weight: 600;
                        padding-left: 30px;
                    }
                }

                 ul {
                    margin: 5px 0;
                    list-style: none;
                    li {
                        margin: 10px 0;
                        padding-left: 30px;
                        list-style-type: none !important;
                        a {
                            padding-left: 30px;
                         }
                    }
                 }
            }
        }

        h5,
        a {
            font-size: 1.2rem;
            font-weight: 400;
            margin: 0;
        }

        a {
            color: $curious-blue;
        }

        // ul {
        //     margin: 0 0 40px;
        // }
    }
    .post-content {
        color: $gray;
        margin-top: 40px;
        font-size: 1.3rem;
        letter-spacing: 0.07px;	
        line-height: 2;
        font-weight: 300;

        ul {
            margin: 20px;

            li {
                margin: 10px 0;
                font-size: 1.3rem;
                letter-spacing: 0.07px;
                line-height: 26px;
                font-weight: 300;
            }
        }
        
        h4 {
          font-size: 1.5rem;
        }

        iframe {
            margin: 20px 0;
        }
    }

    .post-detail {
        margin: 10px 0;
    }

    .solid-related-post {
        padding: 0;
        border-top: 1px solid rgba(0,0,0,0.1);
        margin: 40px 0;
        padding: 40px 0;

        a {
            color: $gray;
        }

        h5 {
            margin: 15px 0 0;
        }
    }
    
    
    @include media-query($on-palm) {
        .h-entry,
        .solid-breadcrumbs {
            .menu-mobile-aside {
                display: none;
            }
        }

        .right-side {
            position: relative;
            top: 0;
        }

        .aside-menu {
            display: block;
        }
    }
}

